--- a/SpringMVC/SpringMVC-jsp/pom.xml
+++ b/SpringMVC/SpringMVC-jsp/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.qujia.mvc</groupId>
-    <artifactId>SpringMVC_demo3</artifactId>
+    <artifactId>SpringMVC-jsp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
